kubernetes/applications/wger/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wger-http-route
  namespace: wger
  annotations:
    gethomepage.dev/description: Fitness Tracker
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: https://raw.githubusercontent.com/wger-project/wger/master/wger/core/static/images/logos/logo.png
    gethomepage.dev/name: wger
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=wger-app"
    gethomepage.dev/href: "https://fitness.mcmumf.dev"
  labels:
    app.kubernetes.io/name: wger-app
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
  hostnames:
    - "fitness.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wger-http
          port: 8000
